# localoco

./: Cargo.toml  README.md
src/: buildscript.rs  compiler.rs  lib.rs  locale_names.rs  strings.rs  util.rs
